	- Fix memory leaks caught by KSPCF.
	- Make wheels susceptible to bullets and explosions too.
- Competition:
	- Fix exception in auto-resuming tournaments when SpawnProbe.craft isn't found.
	- Fix incorrect Kill Steal attribution from 1v1 fights.
- Detectors:
	- Fix IRST preventing Radar GUI close.
	- Fix NRE in targeting camera when the camera parent transform is null.
- Weapons:
	- Fix FXLookAtConstraint modules on various turrets.
	- Fix incorrect charge sound path for lasers.
	- Make the ABL use proper looping audio and add a cool-down sound.
	- Fix the ABL laser beam continuing to show while overheated when used manually.
	- Fix for NRE when heatseeker is manually selected prior to activating guard mode.
	- Make the engage options in the weapon PAWs work properly in flight.
- Armor:
	- Adjusted post-penetration behavior of high velocity rounds, rounds now erode instead of slowing down at high velocities.
		- Multi-plate armor schemes now behave more realistically and will require more careful material selection and configuration.
		- Whipple shields for hypervelocity rounds are now viable and desirable. This behavior is however still very crude and does not qualitative match realistic behavior.
	- Adjusted stats for S-Glass and Kevlar materials to have realistic RHA equivalency.
		- Re-implemented Tate-Alekseevksy equation for low-ductility materials.
	- Added debug console output for armor penetration behavior. Now when Debug -> Armor is on, console will output armor penetration parameters.

v1.5.1.2
FIXES
- Fix adjustable armor unclamped scaling.
- Loosen distance checks for anti-radiation missiles fired at fast-moving targets (fixes instances when AI would not fire anti-radiation missiles at fast-moving targets).
- Fixes for some issues occuring on KSP 1.9.

v1.5.1.1
FIXES
- Fix AI not firing anti-radiation missiles at targets detected via RWR.
- Fix KeyNotFoundException error in weapon selection code.

v1.5.1.0
IMPROVEMENTS / FIXES
- General: