@@ -64,7 +64,7 @@ namespace BDArmory.Armor
             // We don't actually need mu itself or the following variants of it, just
             // the muParams so we'll calculate those instead.
             float muSquared = Density / (11340.0f);
-            float mu = Mathf.Sqrt(muSquared);
+            float mu = Utils.BDAMath.Sqrt(muSquared);
             float muInverse = 1.0f / mu;
             float muInverseSquared = 1.0f / muSquared;
 
@@ -82,7 +82,7 @@ namespace BDArmory.Armor
             // have to build a dictionary instead using all available armor types and
             // projectiles so as to maintain performance as proposed by DocNappers
             muSquared = Density / (19000.0f);
-            mu = Mathf.Sqrt(muSquared);
+            mu = Utils.BDAMath.Sqrt(muSquared);
             muInverse = 1.0f / mu;
             muInverseSquared = 1.0f / muSquared;
 
